[gd_scene load_steps=22 format=3 uid="uid://b1cbglp3ngkrb"]

[ext_resource type="Script" path="res://Scripts/Skills/steve_debuff_potion.gd" id="1_suljj"]
[ext_resource type="AudioStream" uid="uid://b3y0u3upgm8w3" path="res://Assets/Sounds/FXs/Skills/potion_throw.wav" id="2_v1hwq"]
[ext_resource type="Texture2D" uid="uid://ch4ti3oc6o6mk" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_00.png" id="3_fh6l2"]
[ext_resource type="Texture2D" uid="uid://cr6klbgpry20x" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_01.png" id="4_saihk"]
[ext_resource type="Texture2D" uid="uid://kk6axf506tey" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_02.png" id="5_k46ch"]
[ext_resource type="Texture2D" uid="uid://bhopdsgeaamy4" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_03.png" id="6_sai7f"]
[ext_resource type="Texture2D" uid="uid://dfimb0gyk3de1" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_04.png" id="7_sicrx"]
[ext_resource type="Texture2D" uid="uid://brwu0hhvfcl70" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_05.png" id="8_27i81"]
[ext_resource type="Texture2D" uid="uid://b5ugev13ehhvy" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_06.png" id="9_rbe6h"]
[ext_resource type="Texture2D" uid="uid://w7ex0t01ehot" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_07.png" id="10_1kerm"]
[ext_resource type="Texture2D" uid="uid://cpb0pg0a4oaa7" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_08.png" id="11_cdjsb"]
[ext_resource type="Texture2D" uid="uid://20hvd143e0ue" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_09.png" id="12_s2k07"]
[ext_resource type="Texture2D" uid="uid://c1q2x7x4ljb8" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_10.png" id="13_aekog"]
[ext_resource type="Texture2D" uid="uid://cqirix75d0wa0" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_11.png" id="14_mamc6"]
[ext_resource type="Texture2D" uid="uid://ca0wba1tv06wo" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_12.png" id="15_37q8p"]
[ext_resource type="Texture2D" uid="uid://dm1potvs0gk8k" path="res://Assets/Images/Effects/SteveDebuffPotion/EnemyPotion_13.png" id="16_w6pfe"]
[ext_resource type="AudioStream" uid="uid://dv2qekrqjyyjt" path="res://Assets/Sounds/FXs/Skills/splash1.wav" id="17_d00kw"]
[ext_resource type="AudioStream" uid="uid://28wyvuelh0ah" path="res://Assets/Sounds/FXs/Skills/splash2.wav" id="18_t87de"]
[ext_resource type="AudioStream" uid="uid://ex5wm8d4mv2r" path="res://Assets/Sounds/FXs/Skills/splash3.wav" id="19_vsyun"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1jnvg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fh6l2")
}, {
"duration": 1.0,
"texture": ExtResource("4_saihk")
}, {
"duration": 1.0,
"texture": ExtResource("5_k46ch")
}, {
"duration": 1.0,
"texture": ExtResource("6_sai7f")
}, {
"duration": 1.0,
"texture": ExtResource("7_sicrx")
}, {
"duration": 1.0,
"texture": ExtResource("8_27i81")
}, {
"duration": 1.0,
"texture": ExtResource("9_rbe6h")
}, {
"duration": 1.0,
"texture": ExtResource("10_1kerm")
}, {
"duration": 1.0,
"texture": ExtResource("11_cdjsb")
}, {
"duration": 1.0,
"texture": ExtResource("12_s2k07")
}, {
"duration": 1.0,
"texture": ExtResource("13_aekog")
}, {
"duration": 1.0,
"texture": ExtResource("14_mamc6")
}, {
"duration": 1.0,
"texture": ExtResource("15_37q8p")
}, {
"duration": 1.0,
"texture": ExtResource("16_w6pfe")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gm0a6"]
radius = 22.063

[node name="SteveDebuffPotion" type="Area2D"]
y_sort_enabled = true
collision_layer = 0
collision_mask = 96
script = ExtResource("1_suljj")
potion_color = Color(0.760784, 1, 0.4, 1)

[node name="PotionThrow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v1hwq")
autoplay = true
bus = &"Sound"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -63)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_1jnvg")
autoplay = "default"
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.6)
shape = SubResource("CircleShape2D_gm0a6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -41)
scale = Vector2(1, 0.6)
shape = SubResource("CircleShape2D_gm0a6")

[node name="Splash1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_d00kw")
bus = &"Sound"

[node name="Splash2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_t87de")
bus = &"Sound"

[node name="Splash3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_vsyun")
bus = &"Sound"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
